# minebtx

./: .gitignore  .solver-channel.json  CHANGELOG.md  README.md  config.example.yaml  install.sh  pyproject.toml
.github/build-patches/: 01-cuda-capability-gate.patch  02-pow-h-share-target-override.patch  03-pow-cpp-share-target-override.patch  05-cmakelists-add-gbt-solve-target.patch  10-pr58-oracle-accel-windowed-sha.patch  11-pr58-matmul-accel-factored-compression.patch  12-darwin-metal-opt135-embedded-sync.patch  btx-gbt-solve.cpp  ci-refvec.json
.github/workflows/: build-solver-aarch64.yml  build-solver-macos-arm64.yml  build-solver-rocm.yml
docs/: ONBOARDING.md  TUNING.md
release-tooling/: SHA256SUMS  publish-release.sh
release-tooling/experimental/rocm/: README.md  SHA256SUMS  publish.sh
scripts/: build-macos-arm64.sh  inject-hip-cmake.py
src/dexbtx_miner/: __init__.py  __main__.py  benchmark.py  config.py  gbt_solve_wrapper.py  hardware.py  solver_updater.py  stratum_client.py  wrapper_updater.py
